--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
         "moduleResolution": "node",
         "lib": ["es2015"],
         "noEmitOnError": true,
-        "strict": true,
+        "strict": false,
         "noImplicitAny": true,
         "declaration": true,
         "emitDecoratorMetadata": true,
